clutter/clutter/evdev/clutter-device-manager-evdev.c
@@ -102,6 +102,9 @@ struct _ClutterDeviceManagerEvdevPrivate
   gpointer                        constrain_data;
   GDestroyNotify                  constrain_data_notify;
 
+  ClutterRelativeMotionFilter relative_motion_filter;
+  gpointer relative_motion_filter_user_data;
+
   ClutterStageManager *stage_manager;
   guint stage_added_handler;
   guint stage_removed_handler;
@@ -264,6 +267,22 @@ _clutter_device_manager_evdev_constrain_pointer (ClutterDeviceManagerEvdev *mana
     }
 }
 
+void
+_clutter_device_manager_evdev_filter_relative_motion (ClutterDeviceManagerEvdev *manager_evdev,
+                                                      ClutterInputDevice        *device,
+                                                      float                      x,
+                                                      float                      y,
+                                                      float                     *dx,
+                                                      float                     *dy)
+{
+  ClutterDeviceManagerEvdevPrivate *priv = manager_evdev->priv;
+
+  if (!priv->relative_motion_filter)
+    return;
+
+  priv->relative_motion_filter (device, x, y, dx, dy,
+                                priv->relative_motion_filter_user_data);
+}
 
 static ClutterEvent *
 new_absolute_motion_event (ClutterInputDevice *input_device,
@@ -2659,6 +2678,23 @@ clutter_evdev_set_pointer_constrain_callback (ClutterDeviceManager            *e
   priv->constrain_callback = callback;
   priv->constrain_data = user_data;
   priv->constrain_data_notify = user_data_notify;
+}
+
+void
+clutter_evdev_set_relative_motion_filter (ClutterDeviceManager       *evdev,
+                                          ClutterRelativeMotionFilter filter,
+                                          gpointer                    user_data)
+{
+  ClutterDeviceManagerEvdev *manager_evdev;
+  ClutterDeviceManagerEvdevPrivate *priv;
+
+  g_return_if_fail (CLUTTER_IS_DEVICE_MANAGER_EVDEV (evdev));
+
+  manager_evdev = CLUTTER_DEVICE_MANAGER_EVDEV (evdev);
+  priv = manager_evdev->priv;
+
+  priv->relative_motion_filter = filter;
+  priv->relative_motion_filter_user_data = user_data;
 }
 
 /**
