clutter/clutter/evdev/clutter-device-manager-evdev.h
@@ -76,6 +76,13 @@ void _clutter_device_manager_evdev_constrain_pointer (ClutterDeviceManagerEvdev 
                                                       float                     *new_x,
                                                       float                     *new_y);
 
+void _clutter_device_manager_evdev_filter_relative_motion (ClutterDeviceManagerEvdev *manager_evdev,
+                                                           ClutterInputDevice        *device,
+                                                           float                      x,
+                                                           float                      y,
+                                                           float                     *dx,
+                                                           float                     *dy);
+
 void _clutter_device_manager_evdev_dispatch (ClutterDeviceManagerEvdev *manager_evdev);
 
 static inline guint64
